--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     <meta name="google-site-verification" content="Xo-OAHOPtBgAUAizyZIyqho7bRJsz3UAFbq9aQLxRiw" />
     <link rel="canonical" href="https://www.valleyconstructionsupply.com/">
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MC2RB4M');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137702322-12"></script>
     <script>
@@ -160,7 +168,10 @@
         </nav>
     </header>
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MC2RB4M"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 <main id="main-content">
 
     <!-- ============================================ -->
