--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                      for Seattle and the surrounding Puget Sound area.
                 </h2>
                 <button class="primary landing-b" type="button" onclick="location.href='html/promotions.html'" >
-                    PROMOTIONS
+                    GET 15% OFF
                 </button>
                 <button class="about solid landing-cta" type="button" onclick="window.open('/html/contact.html')">
                     CALL US
